objects/Class_Action_Correspondence__c.object
<CustomObject>
    <fields>
        <fullName>Class_Action__c</fullName>
        <label>Sammelklage</label>
        <referenceTo>Class_Action__c</referenceTo>
        <relationshipName>Class_Action_Correspondencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Datum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Titel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_up_Period__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Zeit bis Wiedervorlage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inform_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zur Kenntnisnahme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_Sammelklagenkorrespondenz_ID__c</fullName>
        <label>Old Sammelklagenkorrespondenz ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opponent_Reference__c</fullName>
        <label>Zeichen des Gegners</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Correspondence_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Term__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Term__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Term__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Frist</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Typ</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Class_Action_Correspondence_Types</valueSetName>
        </valueSet>
    </fields>
    <label>Sammelklagenkorrespondenz</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sammelklagenkorrespondenzen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>